--- a/style.css
+++ b/style.css
@@ -1,70 +1,70 @@
 body {
-  background-color: lightcyan;
-  margin: 0;
+    background-color: lightcyan;
+    margin: 0;
 }
 
 h1 {
-  font-family: 'Oswald', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 6em;
-  margin: 1% 0 2%;
-  letter-spacing: 0.05em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 6em;
+    margin: 1% 0 2%;
+    letter-spacing: 0.05em;
 }
 
 h2 {
-  font-family: 'Oswald', sans-serif;
-  text-align: center;
-  font-weight: 400;
-  font-size: 3.5em;
-  margin: 2%;
-  color: grey;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    font-weight: 400;
+    font-size: 3.5em;
+    margin: 2%;
+    color: grey;
 }
 
 #clear-board {
-  margin: 4% auto 3%;
-  display: block;
-  width: 10em;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 300;
-  font-size: 1.2em;
-  border: none;
-  border-radius: 12.5em;
-  box-shadow: 3px 3px 5px #888888;
-  background-color: #0E91A6; /*bluegreen*/
-  color: white;
-  padding: 1em;
-  letter-spacing: 0.05em;
+    margin: 4% auto 3%;
+    display: block;
+    width: 10em;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    font-size: 1.2em;
+    border: none;
+    border-radius: 12.5em;
+    box-shadow: 3px 3px 5px #888888;
+    background-color: #0E91A6;
+    color: white;
+    padding: 1em;
+    letter-spacing: 0.05em;
 }
 
 #clear-board:hover {
-  background-color: grey; /*blue*/
-  color: white;
+    background-color: grey;
+    color: white;
 }
 
 #board {
-  width: 800px;
-  height: 800px;
-  margin: 2% auto;
+    width: 700px;
+    height: 700px;
+    margin: 2% auto;
     font-size: 0;
+    text-align: center;
     /*background-color: blue;*/
 }
 
 .square {
-  display: inline-block;
-  left: 1.5%;
-  top: 2px;
-  height: 32%; width: 32%;
-  /*border-radius: 10%;*/
-  overflow: hidden;
-  background-color: #FFC3E7;
+    display: inline-block;
+    left: 1.5%;
+    top: 2px;
+    height: 33%; width: 33%;
+    overflow: hidden;
+    background-color: #FFC3E7;
     font-family: 'Permanent Marker', cursive;
     font-size: 150px;
     color: #ED3D88;
     text-align: center;
-  cursor: pointer;
-  border: 0.5px solid grey;
+    cursor: pointer;
+    border: 0.5px solid grey;
 }
 
 .wins {
@@ -78,13 +78,13 @@ h2 {
 }
 
 footer {
-  background-color: #0E91A6; /*bluegreen*/
-  text-align: center;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 300;
-  font-size: 0.8em;
-  letter-spacing: 0.05em;
-  color: white;
-  margin: 8% 0 2% 0;
-  padding: 1% 0;
+    background-color: #0E91A6; /*bluegreen*/
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    font-size: 0.8em;
+    letter-spacing: 0.05em;
+    color: white;
+    margin: 8% 0 2% 0;
+    padding: 1% 0;
 }
